--- a/Style4.css
+++ b/Style4.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6, span {
     color: #242424;
     text-align: center;
@@ -20,6 +24,35 @@ h1 {
 p {
     line-height: 1.5;
     font-size: 16px;
+}
+
+a {
+    text-decoration: none;
+    position: relative;
+}
+
+.link__hover-effect:after {
+    content:"";
+    position: absolute;
+    height: 3px;
+    background-color: black;
+    width: 0;
+    bottom: -3px;
+    right: 0;
+    transition: all 300ms ease;
+}
+
+.link__hover-effect--white:after {
+    background-color: #fff;
+}
+
+.link__hover-effect--white:after {
+    background-color: #000;
+}
+
+.link__hover-effect:hover::after {
+    width: 100%;
+    left: 0;
 }
 
 li {
@@ -42,6 +75,7 @@ li {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    padding: 0 12px;
 }
 
 .text--purple {
@@ -62,6 +96,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 12px;
 }
 
 .nav__link--list {
@@ -89,7 +124,7 @@ nav {
 .personal__logo {
     font-size: 24px;
     color: #6030b1;
-    margin: 12px;
+    margin: 0 12px;
     font-weight: bold;
 }
 
@@ -121,6 +156,19 @@ nav {
     overflow: hidden;
     box-shadow: 0 8px 16px rgba( 0, 0, 0, 10.16 );
     margin-bottom: 28px;
+    animation: animate-profile-picture 800ms 1s backwards;
+}
+
+@keyframes animate-profile-picture {
+    0% {
+        transform: scale(0);
+    }
+    80% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1)
+    }
 }
 
 .about-me__picture {
@@ -132,6 +180,7 @@ nav {
 
 .about-me__info--title {
     margin-bottom: 16px;
+    animation: fade-up 650ms 400ms backwards;
 }
 
 .about-me__info--para {
@@ -146,6 +195,21 @@ nav {
     padding: 0 16px;
 }
 
+.about-me__links {
+    animation: fade-up 650ms 800ms backwards;
+}
+
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .about-me__img--container {
     flex: 1;
     display: flex;
@@ -154,6 +218,16 @@ nav {
 
 .about-me__img {
     width: 100%;
+    animation: fade-in 1200ms 800ms backwards;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 /* Tech Stack */
@@ -161,10 +235,10 @@ nav {
 .language__img  {
     width: 100%;
     max-width: 100px;
-    transition: all 300ms;
+    transition: all 300ms ease;
 }
 
-.language__img:hover { 
+.language:hover .language__img { 
     filter: brightness(80%);
     opacity: (0.86);
     transform: scale(0.9);
@@ -196,7 +270,7 @@ nav {
     bottom: 0;
     transform: scale(0);
     transition: all 300ms;
-    font-size: 20px;
+    font-size: 15px;
     opacity: 0;
 }
 
@@ -294,9 +368,23 @@ footer {
     background-color: #242424;
 }
 
+.footer__logo {
+    margin-bottom: 20px;
+}
+
+.footer__social--list {
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 28px;
+}
+
 .footer__row {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 8% 0;
 }
 
@@ -304,3 +392,89 @@ footer {
     width: 70px;
     height: 70px;
 }
+
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper{
+    color: #fff
+}
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+    transform: translateX(60px);
+    opacity: 1;
+}
+
+/* Small Phone, Tablets, Large Smartphones */
+
+@media (max-width: 768px) {
+    height: 68px;
+}
+
+h1 {
+    font-size: 28px;
+}
+
+.about-me__info--para {
+    font-size: 18px;
+}
+
+.language {
+    width: calc(100% / 3);
+}
+
+.project__description--para {
+    font-size: 14px;
+}
+
+.project_description {
+    left: 30px;
+    padding-right: 30px;
+}
+
+/* Small Phones */
+@media (max-width: 480px)  {
+    .nav__link:not(:last-child) {
+        display: none;
+    }
+}
+
+.project__description {
+    padding: 0;
+    left: 0;
+    width: 100%
+}
+
+.project__description--para {
+    display: none;
+}
+
+.project__description--links {
+    display:flex;
+    justify-content: center;
+}
+
+.project__description--tilte {
+    font-size: 32px;
+    line-height: 1;
+    text-align: center;
+}
+
+.project__description--sub-tilte {
+    text-align: center;
+    margin: 12px 0;
+}
+
